--- a/front/package.json
+++ b/front/package.json
@@ -1,7 +1,6 @@
 {
   "name": "front",
   "version": "1.0.0",
-  "description": "",
   "main": "index.html",
   "scripts": {
     "start": "npx http-server .  -p 3000 -P \"http://localhost:3000?\"  -c-1 "
@@ -10,5 +9,6 @@
   "license": "ISC",
   "devDependencies": {
     "dotenv-webpack": "^8.0.1"
-  }
+  },
+  "description": ""
 }
